fixed the mobile responsiveness; fixed the design section circles overlapping on mobile sizes; cleaned up styling and placement of the footer (html, css, etc links); fixed a horizontal scrollbar appearing at larger sizes with a huge section of whitespace off to the right; got rid of some superfluous and commented code

--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -1,5 +1,8 @@
 
 $page-margin: 0.5em;
+html, body { overflow-x: hidden; }
+
+body { margin: 0; }
 
 @mixin box {
     border: $color5 solid 1px;
@@ -22,6 +25,7 @@ $page-margin: 0.5em;
 .page-wrapper {
 	margin: 0 $page-margin;
 	max-width: 1400px;
+	margin-bottom: 20px;
 }
 
 .intro {
@@ -89,13 +93,21 @@ header {
 	grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas: 
 	'design-selection design-selection .'
-	'design-archives design-archives'
+	'. design-archives design-archives'
 	'zen-resources zen-resources .';
 	font-size: $sm-font;
 }
 
 .wrapper h3 {
 	margin: 0;
+}
+
+footer {
+    display: grid;
+    grid-gap: 1em;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	justify-items: center;
+	margin-bottom: 1em;
 }
 
 .design-selection {
@@ -121,25 +133,6 @@ header {
 	height: 300px;
 	@include circle-background();
 }
-/*Animation*/
-
-.design-selection:hover, .zen-resources:hover, .design-archives:hover {
-animation: hover_color 8s linear infinite;
-}
-
-@keyframes hover_color{
-	0% { 
-		background-color: $color3;
-		}
-	
-	50% {
-		background: $color4;
-	}
-	
-	95% {
-		background-color: $color3;
-		}
-}
 
 /*Media Queries*/
 
@@ -154,13 +147,6 @@ animation: hover_color 8s linear infinite;
 		width: 400px;
 		height: 400px;
 	}
-	
-	// .intro {
-    //     grid-template-areas: 'header' 'summary' 'preamble';
-    // }
-    // .mainsupporting {
-    //     grid-template-areas: 'explanation' 'participation' 'benefits' 'requirements'
-    // }
 }
 
 @media screen and (min-width: 1200px) {
@@ -175,21 +161,39 @@ animation: hover_color 8s linear infinite;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-areas: 
 			'explanation participation'
-			'benefits requirements';
+			'benefits requirements'
+			'. footer';
+	}
+	
+	footer {
+		background: none;
+		grid-column-start: footer;
+		justify-self: end;
+		display: block;
+		margin-bottom: 1em;
+		> a {
+			background-color: $color1-trans;
+			margin-left: 0.2em;
+			padding: 0 0.2em 0 0.2em;
+		}
 	}
 
 	.wrapper {
 		grid-template-areas: 
 			'design-selection design-archives zen-resources'
 	}
+
+	
 }
 
 @media screen and (min-width: 1420px) {
 	.page-wrapper {
 		margin: auto;
+		margin-bottom: 20px;
+
 	}
 
 	header {
-		margin: 0 -2000px;
+		margin: 0 -9999px;
 	}
 }
